--- a/index.html
+++ b/index.html
@@ -61,22 +61,26 @@
                                                     margin-left: auto;
                                                     margin-right: auto
                                                 }
+                                                .olPopupContent{
+                                                    width: 279px;
+                                                }
                                             </style>                         
                                             <div class="card">
                                                 <div class="card-body bg-light">
                                                     <h6 class="card-title" style="margin-top:0">Konum Bilgisi</h6>
                                                     <p><small><b class="text-danger">Enlem: </b>${this.lonlat.lat}</small></p>
                                                     <p><small><b class="text-danger">Boylam: </b>${this.lonlat.lon}</small></p>
-                                                   
                                                 </div>
                                                 <div id="container">
-                                                    <a href="https://34.76.241.195:10001/${this.path}" target="_blank">
-                                                        <img class="image" src="https://34.76.241.195:10001/${this.path}" height="100%" width="100%"/>
+                                                    <a href="https://ilyascokan.online:10001/${this.path}" target="_blank">
+                                                        <img class="image" src="https://ilyascokan.online:10001/${this.path}" height="100%" width="100%"/>
                                                     </a>
                                                 </div>`,
                                             true);
                         
                             map.addPopup(popup);
+
+                            $(".olPopupContent").width("268px").attr("overflow","hidden");
                         } 
                     });
 
