Imagelere /GeoGIS path eklendisi yapıldı.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                                                     <p><small><b class="text-danger">Boylam: </b>${this.lonlat.lon}</small></p>
                                                 </div>
                                                 <div id="container">
-                                                    <a href="https://ilyascokan.online/${this.path}" target="_blank">
-                                                        <img class="image" src="https://ilyascokan.online/${this.path}" height="100%" width="100%"/>
+                                                    <a href="https://ilyascokan.online/GeoGIS/${this.path}" target="_blank">
+                                                        <img class="image" src="https://ilyascokan.online/GeoGIS/${this.path}" height="100%" width="100%"/>
                                                     </a>
                                                 </div>`,
                                             true);
